--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^3.3.0",
-    "tesseract.js": "^4.1.1",
+    "pdf-parse": "^1.1.1",
+    "tesseract.js": "^4.1.4",
     "web3.storage": "^4.5.5"
   },
   "devDependencies": {
