--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "notarai-backend",
+  "name": "proofmintai-backend",
   "version": "1.0.0",
-  "description": "Node.js backend for NotarAI",
+  "description": "Node.js backend for ProofMintAI",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
