--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,13 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ethers": "^6.15.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^3.3.0",
     "pdf-parse": "^1.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tesseract.js": "^4.1.4",
     "web3.storage": "^4.5.5"
   },
