--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
     "jspdf": "^3.0.1",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
+    "vee-validate": "^4.15.1",
     "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
