--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "description": "AI-Powered Decentralized Document Verification",
   "productName": "proofmint-ai",
-  "author": "kgardyjas <karol.gardyjas@zetorzeszow.pl>",
   "type": "module",
   "private": true,
   "scripts": {
@@ -24,7 +23,8 @@
     "vee-validate": "^4.15.1",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "web3.storage": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
