--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,13 +23,15 @@
     "vee-validate": "^4.15.1",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12",
-    "yup": "^1.6.1",
-    "web3.storage": "^7.0.0"
+    "web3.storage": "^4.5.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@quasar/app-vite": "^2.1.0",
     "@types/node": "^20.5.9",
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.4.0",
     "autoprefixer": "^10.4.2",
