--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "ethers": "^6.15.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "openai": "^3.3.0",
     "pdf-parse": "^1.1.1",
     "swagger-jsdoc": "^6.2.8",
