feat: add mobile/desktop builds with Quasar

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,24 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
-    "postinstall": "quasar prepare"
+    "postinstall": "quasar prepare",
+    "electron:dev": "quasar dev -m electron",
+    "electron:build": "quasar build -m electron",
+    "electron:pack": "quasar build -m electron --packaging",
+    "electron:dist": "quasar build -m electron --dist",
+    "capacitor:dev": "quasar dev -m capacitor",
+    "capacitor:build": "quasar build -m capacitor",
+    "capacitor:sync": "quasar build -m capacitor && npx cap sync",
+    "capacitor:run:android": "quasar build -m capacitor && npx cap run android",
+    "capacitor:run:ios": "quasar build -m capacitor && npx cap run ios",
+    "capacitor:open:android": "npx cap open android",
+    "capacitor:open:ios": "npx cap open ios",
+    "mobile:build:android": "quasar build -m capacitor && npx cap build android",
+    "mobile:build:ios": "quasar build -m capacitor && npx cap build ios",
+    "desktop:build:win": "quasar build -m electron --target win",
+    "desktop:build:mac": "quasar build -m electron --target mac",
+    "desktop:build:linux": "quasar build -m electron --target linux",
+    "build:all": "npm run build && npm run electron:build && npm run capacitor:build"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
@@ -41,7 +58,33 @@
     "prettier": "^3.3.3",
     "typescript": "~5.5.3",
     "vite-plugin-checker": "^0.9.0",
-    "vue-tsc": "^2.0.29"
+    "vue-tsc": "^2.0.29",
+    "@capacitor/cli": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/device": "^5.0.0",
+    "@capacitor/network": "^5.0.0",
+    "@capacitor/storage": "^5.0.0",
+    "@capacitor/geolocation": "^5.0.0",
+    "@capacitor/camera": "^5.0.0",
+    "@capacitor/filesystem": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/browser": "^5.0.0",
+    "@capacitor/share": "^5.0.0",
+    "@capacitor/toast": "^5.0.0",
+    "@capacitor/action-sheet": "^5.0.0",
+    "@capacitor/dialog": "^5.0.0",
+    "@capacitor/local-notifications": "^5.0.0",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
+    "@capacitor/splash-screen": "^5.0.0",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.0.0",
+    "electron-updater": "^6.0.0",
+    "electron-store": "^8.1.0"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
