--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,13 +59,13 @@
     "typescript": "~5.5.3",
     "vite-plugin-checker": "^0.9.0",
     "vue-tsc": "^2.0.29",
-    "@capacitor/cli": "^5.0.0",
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/android": "^5.0.0",
-    "@capacitor/ios": "^5.0.0",
+    "@capacitor/cli": "^5.6.0",
+    "@capacitor/core": "^5.6.0",
+    "@capacitor/android": "^5.6.0",
+    "@capacitor/ios": "^5.6.0",
     "@capacitor/device": "^5.0.0",
     "@capacitor/network": "^5.0.0",
-    "@capacitor/storage": "^5.0.0",
+    "@capacitor/preferences": "^5.0.0",
     "@capacitor/geolocation": "^5.0.0",
     "@capacitor/camera": "^5.0.0",
     "@capacitor/filesystem": "^5.0.0",
