--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
+    "build:prod": "NODE_ENV=production quasar build",
+    "build:prod:win": "set NODE_ENV=production && quasar build",
+    "build:no-eslint": "ESLINT_DISABLE=1 quasar build",
+    "build:no-eslint:win": "set ESLINT_DISABLE=1 && quasar build",
     "postinstall": "quasar prepare",
     "electron:dev": "quasar dev -m electron",
     "electron:build": "quasar build -m electron",
