chore: update ESLint configuration for TypeScript and Vue support, refine linting scripts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,13 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{ts,js,cjs,mjs,vue}\"",
+    "lint": "eslint -c ./eslint.config.js \"./src/**/*.{ts,js,cjs,mjs,vue}\"",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
     "build:prod": "NODE_ENV=production quasar build",
     "build:prod:win": "set NODE_ENV=production && quasar build",
-    "build:no-eslint": "ESLINT_DISABLE=1 quasar build",
-    "build:no-eslint:win": "set ESLINT_DISABLE=1 && quasar build",
     "postinstall": "quasar prepare",
     "electron:dev": "quasar dev -m electron",
     "electron:build": "quasar build -m electron",
